Add binary word informations
 - Add binary word variables section
 - Add binary word expression in grammar
 - Fix benchmark check syntax

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -149,6 +149,7 @@
 \newcommand{\ArithExprR}{\ArithExpr(\RVar)}
 \newcommand{\ArithExprI}{\ArithExpr(\IVar)}
 \newcommand{\ArithExprB}{\ArithExpr(\BVar)}
+\newcommand{\ArithExprW}{\ArithExpr(\WVar)}
 \newcommand{\C}{C}
 \newcommand{\Cinit}{\C_\init} % initial constraint
 \newcommand{\Clock}{X} % set of clocks
@@ -173,6 +174,10 @@
 \newcommand{\BVar}{B} % set of boolean variables
 \newcommand{\bvar}{b} % boolean variable
 \newcommand{\BVarCard}{L} % cardinality of boolean variables
+\newcommand{\wval}{\ensuremath{\omega}} % binary variable
+\newcommand{\WVar}{W} % set of binary word variables
+\newcommand{\wvar}{w} % binary word variable
+\newcommand{\WVarCard}{M} % cardinality of binary word variables
 % \newcommand{\DVarinit}{\DVar_\init} % discrete variable
 \newcommand{\edge}{e}
 \newcommand{\flow}{\ensuremath{\mathit{flow}}}
@@ -204,6 +209,7 @@
 
 % Sets
 \newcommand{\setB}{\ensuremath{\mathbb B}}
+\newcommand{\setW}{\ensuremath{\mathbb W}}
 \newcommand{\setN}{\ensuremath{\mathbb N}}
 \newcommand{\setQ}{\ensuremath{\mathbb Q}}
 \newcommand{\setQplus}{\ensuremath{\mathbb Q}_{\geq 0}}
