--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -238,9 +238,11 @@ Note that the initial definition can introduce more complex constraints over clo
 \paragraph{Property specification}
 For this model, the correctness property is that two processes cannot be in the critical section at the same time; as explained above, this is equivalent to the fact that the \styleIMI{obs\_violation} location of the \styleIMI{observer} \IPTA{} is unreachable.
 This is input in the property as follows:
-\begin{center}
-	\styleIMI{property := \#synth AGnot(loc[observer] = obs\_violation);}
-\end{center}
+
+\begin{IMITATORproperty}
+	property := #synth AGnot(loc[observer] = obs_violation);
+\end{IMITATORproperty}
+
 Here, \styleIMI{AGnot} stands for safety.
 More elaborate properties are detailed in \cref{ss:mode:prop}.
 % (however, most properties in \imitator{} \emph{reduce} to safety or reachability, and more complex properties such as Büchi-like properties or fairness are not yet supported by \imitator{}).
@@ -258,18 +260,26 @@ Finally, let us run \imitator{} on this case study.
 Quite naturally, what we would be interested in is knowing for which parameter valuations this protocol is correct, \ie{} no more than one process can be present in the critical section at one time.
 Assuming this model is input in file \stylePath{fischer.imi} and the property is in file \stylePath{fischer.imiprop}, the command calling \imitator{} is as follows:
 
-\styleCommand{\binimitator{} fischer.imi fischer.imiprop}
+
+
+%------------------------------------------------------------
+\begin{terminal}
+imitator fischer.imi fischer.imiprop
+\end{terminal}
+%------------------------------------------------------------
 
 % In this command, \styleOption{-mode EF} calls the algorithm \EFsynth{} that synthesizes valuations reaching a given location (see \cref{ss:mode:EFsynth}); and \styleOption{-merge} is a merging technique reducing the state space that, for this model, ensures termination (see \cite{AFS13atva} for more details on merging).
 
 The result of the call to \imitator{} is
 
-\styleTerminalOutput{
-	Final positive constraint guaranteeing safety:\\
-	delta >= 0\\
-	\& gamma > delta\\
-	This positive constraint is exact (sound and complete)
-}
+%------------------------------------------------------------
+\begin{terminaloutput}
+Final positive constraint guaranteeing safety:
+delta >= 0
+& gamma > delta
+This positive constraint is exact (sound and complete)
+\end{terminaloutput}
+%------------------------------------------------------------
 
 That is, the system is safe if \styleIMI{O <= delta < gamma}, which is the well-known constraint ensuring mutual exclusion for this protocol.
 % TODO: ref
@@ -813,7 +823,11 @@ For more detailed commands, and a complete list of options, see \cref{chapter:op
 \paragraph{Main command}
 The standard \imitator{} command for all algorithms is:
 
-\styleCommand{\binimitator{} model.imi property.imiprop}
+%------------------------------------------------------------
+\begin{terminal}
+imitator model.imi property.imiprop
+\end{terminal}
+%------------------------------------------------------------
 
 \paragraph{Synthesis and emptiness}
 \imitator{} features two modes for properties:
@@ -841,8 +855,12 @@ The property syntax is as follows:\footnote{%
 	\imitator{} uses the TCTL syntax, where EF notably denotes reachability.
 }
 
-\styleIMI{property := \#synth EF(state\_predicate);}\\
-where \styleIMI{state\_predicate} is a state predicate, for example of the form \styleIMI{loc[AUTOMATON] = LOCATION}, where \styleIMI{AUTOMATON} is an automaton name, and \styleIMI{LOCATION} is a location name.
+\begin{IMITATORproperty}
+property := #synth EF(state_predicate);
+\end{IMITATORproperty}
+
+
+\noindent{}where \styleIMI{state\_predicate} is a state predicate, for example of the form \styleIMI{loc[AUTOMATON] = LOCATION}, where \styleIMI{AUTOMATON} is an automaton name, and \styleIMI{LOCATION} is a location name.
 State predicates allow conjunction, disjunction and the use of global discrete variables (see \cref{section:grammar-property} for details).
 
 
@@ -852,7 +870,11 @@ Of course, the EF-emptiness problem being undecidable~\cite{AHV93}, the analysis
 
 % The standard command is:
 %
-% \styleCommand{\binimitator{} model.imi -mode EFunsafe -merge -incl -output-result}
+% %------------------------------------------------------------
+% \begin{terminal}
+% imitator model.imi -mode EFunsafe -merge -incl -output-result
+% \end{terminal}
+%------------------------------------------------------------
 
 % The option \styleOption{-output-result} is not compulsory, but allows one to
 One obtains a result in an external text file (\stylePath{model.res}) formatted using a standardized manner (see \cref{chapter:result}), and therefore easier to parse using an external tool than the terminal output.
@@ -874,11 +896,15 @@ output the text description of all states (option \styleOption{-states-descripti
 	In that case, one can use the \styleIMI{accepting} predicate inside the property state predicate.
 	That is, one can define properties of the form:
 
-	\styleIMI{property := \#witness EF(accepting);}
+\begin{IMITATORproperty}
+property := #witness EF(accepting);
+\end{IMITATORproperty}
 
 	or even:
 
-	\styleIMI{property := \#synth EF(loc[pta] = l1 | (accepting \& loc[pta] <> l2));}
+\begin{IMITATORproperty}
+property := #synth EF(loc[pta] = l1 | (accepting & loc[pta] <> l2));
+\end{IMITATORproperty}
 
 	The semantics of the acceptance of a state is as follows: ``at least one of the locations is accepting (as specified by the \styleIMI{accepting} keyword in the model).''
 
@@ -894,11 +920,15 @@ output the text description of all states (option \styleOption{-states-descripti
 % \begin{becareful}
 % 	From \cref{remark:accepting}, one can see that
 %
-% 	\styleIMI{property := \#synth EF(False);}
+% 	\begin{IMITATORproperty}
+% property := #synth EF(False);
+% \end{IMITATORproperty}
 %
 % 	is absolutely equivalent to
 %
-% 	\styleIMI{property := \#synth EF(accepting);}.
+% 	\begin{IMITATORproperty}
+% property := #synth EF(accepting);
+% \end{IMITATORproperty}
 %
 % 	This might be seem counterintuitive; but remember that the \styleIMI{accepting} keyword can be seen as a ``hack'', and the acceptance condition should normally be defined in \emph{properties} only.
 % \end{becareful}
@@ -914,11 +944,17 @@ Often, we are rather interested in \emph{safety} synthesis, \ie{} the set of val
 
 % The standard command is:
 %
-% \styleCommand{\binimitator{} model.imi -mode EF -merge -incl -output-result}
+% %------------------------------------------------------------
+% \begin{terminal}
+%imitator model.imi -mode EF -merge -incl -output-result
+% \end{terminal}
+%------------------------------------------------------------
 
 The property syntax is as follows:
 
-\styleIMI{property := \#synth AGnot(state\_predicate);}
+\begin{IMITATORproperty}
+property := #synth AGnot(state_predicate);
+\end{IMITATORproperty}
 
 Internally, this algorithm works exactly the same as the reachability-synthesis, and at the end the obtained constraint is \emph{negated} (with parameters being constrained to be included in the initial state valuations).
 
@@ -933,7 +969,10 @@ This algorithm is briefly mentioned in~\cite{ABPV19}.
 
 The property syntax is as follows:
 
-\styleIMI{property := \#synth EFpmin(state\_predicate, p);}\\
+\begin{IMITATORproperty}
+property := #synth EFpmin(state_predicate, p);
+\end{IMITATORproperty}
+
 where \styleIMI{p} is the parameter the value of which must be minimized.
 
 
@@ -946,7 +985,9 @@ This algorithm is the dual of EF-minimization (see \cref{ss:mode:EFmin}).
 
 The property syntax is as follows:
 
-\styleIMI{property := \#synth EFpmax(state\_predicate, p);}
+\begin{IMITATORproperty}
+property := #synth EFpmax(state_predicate, p);
+\end{IMITATORproperty}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -958,13 +999,12 @@ This algorithm synthesizes the parameter valuations for which a given location i
 
 Our algorithm uses a priority queue, with priority to the earliest successor for the selection of the next state.
 
-% The standard command is:
-%
-% \styleCommand{\binimitator{} model.imi -mode EFsynthminpq -merge -incl -output-result}
 
 The property syntax is as follows:
 
-\styleIMI{property := \#synth EFtmin(state\_predicate);}
+\begin{IMITATORproperty}
+property := #synth EFtmin(state_predicate);
+\end{IMITATORproperty}
 
 \emph{The maximum time reachability is currently not implemented.}
 
@@ -985,9 +1025,11 @@ Encoding observers can be done manually (using \adhoc{} \IPTA{}), or using prede
 
 If using a predefined property pattern, the property pattern must be specified as follows:
 
-\styleIMI{property := \#synth pattern(<PROP>)}
-\\
-where \styleIMI{<PROP>} must follow the syntax of the following patterns, where \styleIMI{a}, \styleIMI{a1}, \styleIMI{a2} are actions, and the deadline \styleIMI{d} is a (possibly parametric) linear expression:
+\begin{IMITATORproperty}
+property := #synth pattern(<PROP>);
+\end{IMITATORproperty}
+
+\noindent{}where \styleIMI{<PROP>} must follow the syntax of the following patterns, where \styleIMI{a}, \styleIMI{a1}, \styleIMI{a2} are actions, and the deadline \styleIMI{d} is a (possibly parametric) linear expression:
 
 \begin{itemize}
 	\item \styleIMI{if a2 then a1 has happened before}
@@ -1014,7 +1056,11 @@ The semantics of these properties is detailed in~\cite{Andre13ICECCS}.
 
 % Then, the command to synthesize parameters is the same as for the EF-synthesis:
 %
-% \styleCommand{\binimitator{} model.imi -mode EF -merge -incl -output-result}
+% %------------------------------------------------------------
+% \begin{terminal}
+% imitator model.imi -mode EF -merge -incl -output-result}
+% \end{terminal}
+%------------------------------------------------------------
 %
 % Once more, options \styleOption{-merge} and \styleOption{-incl} are optional, but often improve efficiency and termination.
 
@@ -1029,7 +1075,9 @@ Given an \NIPTA{}, \PDFC{} synthesizes a parameter constraint such that, for any
 
 The property syntax is as follows:
 
-\styleIMI{property := \#synth DeadlockFree;}
+\begin{IMITATORproperty}
+property := #synth DeadlockFree;
+\end{IMITATORproperty}
 
 As usual, \imitator{} can also
 output the state space in a graphical form (option \styleOption{-draw-statespace})
@@ -1059,7 +1107,9 @@ This can be seen as a liveness property, or more precisely Büchi acceptance con
 
 In both cases, the property syntax is as follows:
 
-\styleIMI{property := \#synth CycleThrough(state\_predicate);}
+\begin{IMITATORproperty}
+property := #synth CycleThrough(state_predicate);
+\end{IMITATORproperty}
 
 %------------------------------------------------------------
 \begin{syntaxalias}
@@ -1099,7 +1149,9 @@ This (non-default) algorithm can be called using the following option syntax:
 %
 % The property syntax is as follows:
 %
-% \styleIMI{property := \#synth inf\_acc\_cycle;}
+% \begin{IMITATORproperty}
+% property := #synth inf_acc_cycle;
+% \end{IMITATORproperty}
 %
 % However, there are two main differences with \cref{ss:loop,sss:accepting-loop-BFS}:
 % \begin{enumerate}
@@ -1109,7 +1161,11 @@ This (non-default) algorithm can be called using the following option syntax:
 %
 % The command is therefore:
 %
-% \styleCommand{\binimitator{} model.imi property.imiprop -expl-order NDFS}
+% %------------------------------------------------------------
+% \begin{terminal}
+% imitator model.imi property.imiprop -expl-order NDFS
+% \end{terminal}
+%------------------------------------------------------------
 %
 % Several heuristics can be used, some of them synthesizing all parameter values for which a cycle can be found.
 % These are accessible via the \styleOption{-expl-order} option:
@@ -1210,7 +1266,9 @@ output the constraint synthesized in a graphical form in two dimensions (option 
 Generalized Büchi conditions are supported by \imitator{}.
 The property syntax is as follows:
 
-\styleIMI{property := \#synth CycleThrough(state\_predicate\_1, \dots, state\_predicate\_n);}
+\begin{IMITATORproperty}
+property := #synth CycleThrough(state_predicate_1, ..., state_predicate_n);
+\end{IMITATORproperty}
 
 The semantics is that each of the $n$ conditions must hold on at least one state of the same cycle, in order for this cycle to be accepting.
 
@@ -1225,7 +1283,9 @@ The semantics is that each of the $n$ conditions must hold on at least one state
 \begin{example}
 	Assume the following condition:
 	
-\styleIMI{property := \#synth CycleThrough(loc[pta1] = l1, loc[pta1] = l2 and loc[pta2] = l2, accepting, i = 2 or i = 3);}
+\begin{IMITATORproperty}
+property := #synth CycleThrough(loc[pta1] = l1, loc[pta1] = l2 and loc[pta2] = l2, accepting, i = 2 or i = 3);
+\end{IMITATORproperty}
 
 A cycle is accepting if it contains:
 \begin{itemize}
@@ -1249,12 +1309,16 @@ Given an \NIPTA{}, \imitator{} synthesizes a parameter constraint such that, for
 
 The property syntax is as follows:
 
-\styleIMI{property := \#synth Cycle;}
-
+\begin{IMITATORproperty}
+property := #synth Cycle;
+\end{IMITATORproperty}
 
 This is syntactic sugar for the following property:
 
-\styleIMI{property := \#synth CycleThrough(True);}
+\begin{IMITATORproperty}
+property := #synth CycleThrough(True);
+\end{IMITATORproperty}
+
 %------------------------------------------------------------
 \begin{syntaxalias}
 	\imitator{} accepts the \styleIMI{Loop} keyword as an equivalent for \styleIMI{Cycle}.
@@ -1276,8 +1340,9 @@ The precise algorithm we use, including the transformation of an arbitrary PTA i
 
 The property syntax is:
 
-\styleIMI{property := \#synth NZCycle;}
-
+\begin{IMITATORproperty}
+property := #synth NZCycle;
+\end{IMITATORproperty}
 
 Two options are possible in \imitator{}:
 \begin{enumerate}
@@ -1328,7 +1393,9 @@ The trace-preservation emptiness problem being undecidable~\cite{AM15}, the anal
 
 The property syntax is of the following form:
 
-\styleIMI{property := \#synth IM(parameter\_valuation);}
+\begin{IMITATORproperty}
+property := #synth IM(parameter_valuation);
+\end{IMITATORproperty}
 
 \noindent{}
 where \styleIMI{parameter\_valuation} is a reference valuation of the form \styleIMI{p1 = 1 \& p2 = 2 \&…} (see \cref{section:grammar-property} for details).
@@ -1368,7 +1435,9 @@ The corresponding problem being undecidable, the analysis is not guaranteed to t
 The property syntax is of the following form:
 
 
-\styleIMI{property := \#synth BCcover(hyper\_rectangle);}
+\begin{IMITATORproperty}
+property := #synth BCcover(hyper_rectangle);
+\end{IMITATORproperty}
 
 \noindent{}
 where \styleIMI{hyper\_rectangle} is a reference hyper-rectangle of the form \styleIMI{p1 = 1..5 \& p2 = 2..4 \&…} (see \cref{section:grammar-property} for details).
@@ -1383,7 +1452,9 @@ output the constraints synthesized in a graphical form in two dimensions (option
 
 When using the following syntax with an optional second argument:
 
-\styleIMI{property := \#synth BCcover(hyper\_rectangle, step=2/3);}
+\begin{IMITATORproperty}
+property := #synth BCcover(hyper_rectangle, step=2/3);
+\end{IMITATORproperty}
 
 \noindent one can specify the interval between any two points of which the coverage is checked (see \cite{AF10}), here \styleIMI{2/3}.
 By default, it is 1; setting $\frac{1}{3}$ often leads to full coverage when 1 was not enough.
@@ -1407,7 +1478,9 @@ An alternative to the behavioral cartography is a random coverage~\cite{AF10}; i
 
 The property syntax is of the following form:
 
-\styleIMI{property := \#synth BCrandom(hyper\_rectangle , nb);}
+\begin{IMITATORproperty}
+property := #synth BCrandom(hyper_rectangle , nb);
+\end{IMITATORproperty}
 
 
 \noindent{}where \styleOption{nb} is the number of times an integer point is randomly selected within the domain defined.
@@ -1429,7 +1502,9 @@ It differs from the random cartography in the sense that the random cartography 
 
 The property syntax is:
 
-\styleIMI{property := \#synth BCshuffle(hyper\_rectangle);}
+\begin{IMITATORproperty}
+property := #synth BCshuffle(hyper_rectangle);
+\end{IMITATORproperty}
 
 
 
@@ -1443,7 +1518,9 @@ By preserving the reachability, we mean that $\loc$ is reachable for the other v
 
 This algorithm~$\PRP$, that somehow combines \EFsynth{} and \IM{} (see~\cite{ALNS15} for details), is called using the following property syntax:
 
-\styleIMI{property := \#synth PRP(state\_predicate , parameter\_valuation);}
+\begin{IMITATORproperty}
+property := #synth PRP(state_predicate , parameter_valuation);
+\end{IMITATORproperty}
 
 
 
@@ -1456,7 +1533,9 @@ An extension of $\PRP$ to the cartography (named \PRPC{}) is also available: \PR
 
 The property syntax for this algorithm $\PRPC$ is as follows:
 
-\styleIMI{property := \#synth PRPC(state\_predicate , hyper\_rectangle);}
+\begin{IMITATORproperty}
+property := #synth PRPC(state_predicate , hyper_rectangle);
+\end{IMITATORproperty}
 
 
 
@@ -1633,7 +1712,11 @@ Of course, the state space may be infinite, and this analysis is not guaranteed 
 
 The standard command is:
 
-\styleCommand{\binimitator{} model.imi -mode statespace -states-description}
+%------------------------------------------------------------
+\begin{terminal}
+imitator model.imi -mode statespace -states-description
+\end{terminal}
+%------------------------------------------------------------
 
 The option \styleOption{-states-description} generates a file with a textual description of all states (without this option, \imitator{} will not output anything).
 Each state is represented with its discrete part (location and values of the discrete variables), the clock and parameter constraints, and below their projection onto the parameters.
@@ -1752,7 +1835,11 @@ For more detailed commands, and a complete list of options, see \cref{chapter:op
 
 To generate the (discretized) state space of a given computation in a graphical form, use:
 
-\styleCommand{\binimitator{} model.imi [property.imiprop] [options] -draw-statespace normal}
+%------------------------------------------------------------
+\begin{terminal}
+imitator model.imi [property.imiprop] [options] -draw-statespace normal
+\end{terminal}
+%------------------------------------------------------------
 
 \imitator{} will generate a file \stylePath{model-statespace.pdf}.
 States are made of two part: the left-hand number (\eg{} \styleFileContent{s\_0}) is the number of the symbolic state, which comes from \imitator{} internal representation (\styleFileContent{s\_0} is the first one to be generated, and so on); the right-hand part displays all the discrete part of the symbolic state vertically, that is the current location in each of the NIPTA in parallel, and the value of possible discrete variables (if any).
@@ -1779,7 +1866,11 @@ This option is mostly suitable for small state spaces.
 
 	These graphics were generated using the example in \cref{chapter:syntax-introduction} with the following command:
 
-	\styleCommand{\binimitator{} fischer.imi fischer.imiprop -depth-limit 4 -draw-statespace normal}
+%------------------------------------------------------------
+\begin{terminal}
+imitator fischer.imi fischer.imiprop -depth-limit 4 -draw-statespace normal
+\end{terminal}
+%------------------------------------------------------------
 
 	(where \styleOption{normal} should be replaced with \styleOption{undetailed} or \styleOption{full}, respectively)
 \end{example}
@@ -1817,7 +1908,11 @@ This option is mostly suitable for small state spaces.
 
 To visualize the constraint generated by \imitator{} using a 2-dimensional plot (thanks to the external \stylePath{plot} utility), use:
 
-\styleCommand{\binimitator{} model.imi property.imiprop [options] -draw-cart}
+%------------------------------------------------------------
+\begin{terminal}
+imitator model.imi property.imiprop [options] -draw-cart
+\end{terminal}
+%------------------------------------------------------------
 
 This will generate file \stylePath{model\_cart.png}.
 % \stylePath{model\_cart\_ef.png} if the algorithm is \EFsynth{},
@@ -1844,7 +1939,11 @@ and \styleOption{-graphics-source} to keep the plot source.
 Since version 2.11, \imitator{} supports a translation of the model to the \uppaal{} syntax~\cite{LPY97}.
 To generate an equivalent \uppaal{} model without performing any analysis, use:
 
-\styleCommand{\binimitator{} model.imi -imi2Uppaal}
+%------------------------------------------------------------
+\begin{terminal}
+imitator model.imi -imi2Uppaal
+\end{terminal}
+%------------------------------------------------------------
 
 \imitator{} will generate a file \stylePath{model-uppaal.xml}.
 Note that the translation of properties is not supported.
@@ -1908,7 +2007,11 @@ Properties are so far not translated to \uppaal{}.
 Since version 2.8, \imitator{} supports a translation of the model to the \hytech{} syntax~\cite{HHW95} (that is quite close to that of \imitator{} anyway).
 To generate an equivalent \hytech{} model without performing any analysis, use:
 
-\styleCommand{\binimitator{} model.imi -imi2HyTech}
+%------------------------------------------------------------
+\begin{terminal}
+imitator model.imi -imi2HyTech
+\end{terminal}
+%------------------------------------------------------------
 
 \imitator{} will generate a file \stylePath{model.hy}.
 
@@ -1925,7 +2028,11 @@ In addition, the translation of properties is not supported.
 Since version 3.1, \imitator{} supports a translation of the model to the \href{https://jani-spec.org/}{\jani{} specification}~\cite{BDHHJT17}.
 To generate an equivalent \jani{} model without performing any analysis, use:
 
-\styleCommand{\binimitator{} model.imi -imi2Jani}
+%------------------------------------------------------------
+\begin{terminal}
+imitator model.imi -imi2Jani
+\end{terminal}
+%------------------------------------------------------------
 
 \imitator{} will generate a file \stylePath{model.jani}.
 Note that the translation of properties is not supported.
@@ -1969,11 +2076,23 @@ The corresponding input in the \jani{} file exists but remains empty.
 
 To generate a graphic representation of the \NIPTA{} model without performing any analysis, use:
 
-\styleCommand{\binimitator{} model.imi -imi2JPG}
+%------------------------------------------------------------
+\begin{terminal}
+imitator model.imi -imi2JPG
+\end{terminal}
+%------------------------------------------------------------
 
-\styleCommand{\binimitator{} model.imi -imi2PDF}
+%------------------------------------------------------------
+\begin{terminal}
+imitator model.imi -imi2PDF
+\end{terminal}
+%------------------------------------------------------------
 
-\styleCommand{\binimitator{} model.imi -imi2PNG}
+%------------------------------------------------------------
+\begin{terminal}
+imitator model.imi -imi2PNG
+\end{terminal}
+%------------------------------------------------------------
 
 \imitator{} will generate a file \stylePath{model-pta.jpg}, \stylePath{model-pta.pdf} and \stylePath{model-pta.png} respectively (using the \gdot{} utility).
 
@@ -2000,7 +2119,11 @@ Colored transitions are synchronized transitions (\ie{} shared by at least two \
 
 To generate a \LaTeX{} representation of the \NIPTA{} model (using the \texttt{tikz} package) without performing any analysis, use:
 
-\styleCommand{\binimitator{} model.imi -imi2TikZ}
+%------------------------------------------------------------
+\begin{terminal}
+imitator model.imi -imi2TikZ
+\end{terminal}
+%------------------------------------------------------------
 
 \imitator{} will generate a file \stylePath{model.tex}.
 This file is a standalone \LaTeX{} file containing a single figure, which contains the different \IPTA{} in ``\texttt{subfigure}'' environments.
